[package]
name = "meshtastic-mqtt-harvester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.8"
dotenvy = "0.15"
prost = "0.11"
rumqttc = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-geo-types-0_7", "with-chrono-0_4"] }

[build-dependencies]
prost-build = "0.11"