[package]
name = "meshtastic-mqtt-harvester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.8"
dotenvy = "0.15"
once_cell = "1"
prost = "0.11"
rumqttc = "0.22"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "bigdecimal" ] }
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.11"
