[package]
name = "meshtastic-mqtt-harvester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
chrono-tz = "*"
dotenvy = "*"
once_cell = "*"
prost = "*"
rumqttc = "*"
sqlx = { version = "*", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "bigdecimal" ] }
thiserror = "*"
tokio = { version = "*", features = ["full"] }

[build-dependencies]
prost-build = "*"
